# OLA2022-Project

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  poetry-app.yml
notebooks/: ContextGeneration.ipynb  DeterministicSeededRandomness.ipynb  DynamicEnvPlayground.ipynb  DynamicLearnerShowcase.ipynb  Example.ipynb  GraphlessFixShowcase.ipynb  LearnerPlayground.ipynb  Step3-UncertainAlpha.ipynb  Step4-UncertainAlphaUnits.ipynb  Step6-DynamicEnvironment.ipynb  Step7-ContextGeneration.ipynb  StupidLearner.ipynb  Untitled.ipynb  VisualizeEnvironment.ipynb  clairvoyant-learner.ipynb  stupid-learner.ipynb
ola2022_project/: __init__.py  cli.py  simulation.py  utils.py
ola2022_project/algorithms/: __init__.py  context_splitting.py  multi_armed_bandits.py  reward_estimator.py
ola2022_project/environment/: .environment.py.un~  __init__.py  environment.py  environment_data.py  visualization.py
ola2022_project/learners/: MAB_algorithms.py  __init__.py  alphaless_learner.py  clairvoyant_learner.py  contextual_learner.py  dynamic_alphaless_learner.py  graphless_learner.py  learner.py  stupid_learner.py
ola2022_project/optimization/: __init__.py  budget_assignment.py  graph_influence.py
ola2022_project/simulation/: .simulation.py.un~  __init__.py  dataset_simulation.py  simulation.py  simulation.py~  (+1 more)
tests/: __init__.py  test_clairvoyant_learner.py  test_environment.py  test_graph_influence.py  test_graphless_learner.py  test_multiple_learners.py  test_optimization_budget_assignment.py  test_version.py
(+1 files in other folders)
