[tool.poetry]
name = "ola2022_project"
version = "0.1.0"
description = "Project for the Online Learning Applications class at Politecnico di Milano a.a. 2021-2022"
authors = ["Ole Martin Ruud <dev@barskern.no>", "Roberto Reggiani"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
matplotlib = "^3.5.2"
pandas = "^1.4.2"
tqdm = "^4.64.0"
colorlog = "^6.6.0"
python-dotenv = "^0.20.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^7.1.2"
black = "^22.3.0"
pre-commit = "^2.18.1"
hypothesis = {version = "^6.46.2", extras = ["numpy"]}

[tool.poetry.scripts]
# command_name = module_for_handler : function_for_handler
ola2022_project = 'ola2022_project.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
